[project]
name = "wattivahti-influx"
version = "0.1.0"
description = "Sync electricity consumption data from WattiVahti API to InfluxDB"
requires-python = ">=3.10"
dependencies = [
    "b2c-oauth-client",
    "influxdb-client",
    "python-dotenv",
    "requests",
]

[project.scripts]
sync = "sync:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["sync.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ty]
strict = true

